# ai-voice-input

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: SETUP.md
docs/superpowers/plans/: 2026-06-27-ai-voice-input.md
docs/superpowers/specs/: 2026-06-27-ai-voice-input-design.md
public/: overlay.html
scripts/: fetch-sidecars.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/state/sessions/1d03f966-9362-41d0-a0ee-622cab30b450/: last-tool-error-state.json  pre-tool-advisory-throttle.json
src-tauri/sidecar/: sensevoice-asr.py  whisper-asr.py
src-tauri/sidecar/whisper-model/: config.json  generation_config.json
src-tauri/src/: audio.rs  cloud_llm.rs  hotkey.rs  insert.rs  lib.rs  main.rs  overlay.rs  pipeline.rs  sidecar.rs  storage.rs
src-tauri/src/commands/: cloud_llm.rs  history.rs  mod.rs  models.rs  recording.rs  settings.rs
src-tauri/tests/: storage_test.rs
src/views/: FirstRun.tsx  History.tsx  Overlay.tsx  Settings.tsx
