[package]
name = "ai-voice-input"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_voice_input_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
arboard = "3.4"
enigo = "0.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
once_cell = "1"
parking_lot = "0.12"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[dev-dependencies]
mockito = "1.4"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
